<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_login_bg"
    android:orientation="vertical"
    tools:context="com.fithe.login.regActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/btn_login_bg"
            app:srcCompat="@drawable/ic_back_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"

            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_banner_foreground" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/idText"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:hint="@string/hint_id"
                    android:padding="10dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />


                <Button
                    android:id="@+id/validateButton"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/my_btn"
                    android:text="idcheck"
                    android:textColor="#ffffff"
                    android:textSize="10sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_https_black_24dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_eamil_black_24dp"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/genderWoman"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="F" />

                <RadioButton
                    android:id="@+id/genderMan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="M" />
            </RadioGroup>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/my_btn"
                android:text="Register"
                android:textColor="#ffffff"
                android:textSize="10sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>

